# async-crawler

./: .gitignore  README.md
components/crawler/: Dockerfile  README.md  pyproject.toml
components/crawler/src/crawler/: cli.py  core.py  thumbnails.py  transforms.py  utils.py  videos.py
components/crawler/src/crawler/callbacks/: base.py  stopping.py
components/crawler/tests/: conftest.py  test_callbacks.py  test_transforms.py  test_utils.py  test_videos.py
components/crawler/tests/resources/: payload_crawl.json  payload_search.json
