[tool.poetry]
name = "crawler"
version = "0.1.0"
description = "Crawler for xyz api"
authors = ["mr. bossman"]
readme = "README.md"
packages = [
  {include = "crawler", from = "src"}
]

[tool.poetry.scripts]
redtube = "crawler.cli:app"
cli = "crawler.cli:app"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
httpx = "^0.27.0"
pandas = "^2.2.1"
pendulum = "^3.0.0"
pyarrow = "^15.0.0"
tenacity = "^8.2.3"
rich = {extras = ["all"], version = "^13.7.1"}
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.group.dev.dependencies]
ipython = "^8.22.1"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.pyright]
venvPath = "."
venv = ".venv"

[virtualenvs]
create = true
in-project = true
